--- a/css/about.css
+++ b/css/about.css
@@ -124,6 +124,25 @@ body{
     
 }
 
+/* @media (max-width: 992px) {
+   .about-range h5{
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 3%;
+    text-align: center;
+}
+
+.about-range .border-range{
+    width: 90px;
+    height: 90px;
+    border:  2px solid #B59F65;
+    border-left: 2px #192D2F  solid;
+
+    border-radius: 50%;
+    
+}
+} */
+
 .about-range h4{
     font-size: 20px;
     line-height: 60px;
