--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,14 @@
     font-family:'GillSans' ;
     src: url(../gill-sans-std/GillSansStd.otf);
 }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    overflow-x: hidden;
+
 }
 
 .text-color{
@@ -52,7 +57,7 @@ body{
     background-image: url(../image/home-main-cover.webp);
     background-position: center center;
     background-size: cover;
-    height: 90vh;
+    height: 100vh;
 }
 .home-main h1{
     font-size: 46px;
@@ -91,11 +96,11 @@ body{
     background-color: rgb(255, 255, 255);
     height: 50px;
 }
-/* @media (max-width: 992px) {
+@media (max-width: 992px) {
   .header .col-lg-1 .p-after::after {
     content: none; 
   }
-} */
+}
 
 .header .home-main button{
     background-color: #B59F65;
@@ -109,6 +114,7 @@ body{
 }
 .item-img{
     position: absolute;
+    
     bottom: 35px;
 }
 
