--- a/css/about.css
+++ b/css/about.css
@@ -124,7 +124,7 @@ body{
     
 }
 
-/* @media (max-width: 992px) {
+@media (max-width: 992px) {
    .about-range h5{
     font-size: 20px;
     line-height: 30px;
@@ -141,7 +141,7 @@ body{
     border-radius: 50%;
     
 }
-} */
+}
 
 .about-range h4{
     font-size: 20px;
