--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body{
 .text-bg-color{
     background-color: #B59F65;
 }
-.fixed-btn button{
+/* .fixed-btn button{
     border-radius: 50%;
     border: none;
     padding: 7px;
@@ -29,7 +29,7 @@ body{
 .fixed-btn a{
     text-decoration: none;
     color: #192D2F;
-}
+} */
 .bg-color{
     background-color: #192D2F;
 }
@@ -59,9 +59,11 @@ body{
     background-size: cover;
     height: 100vh;
 }
+
+
 .home-main h1{
     font-size: 46px;
-    line-height: 70px;
+    line-height: 60px;
     font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 400;
 
@@ -97,7 +99,11 @@ body{
     height: 50px;
 }
 @media (max-width: 992px) {
+  .header .col-lg-1 p{
+    position: static;
+  }
   .header .col-lg-1 .p-after::after {
+    position: static;
     content: none; 
   }
 }
@@ -320,3 +326,16 @@ body{
     line-height: 30px;
     display: block;
 }
+
+
+/* 
+@media (max-width: 767.98px) { 
+    .home-main h1{
+    font-size: 32px;
+    line-height: 50px;
+    font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 400;
+
+}
+
+} */
